# factryflow

./: .dockerignore  .env-template  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  req.txt  requirements-dev.txt  requirements.txt  tailwind.config.js  test.py
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
.github/workflows/: ci-models.yml  deploy-live.yml
nginx/: nginx.conf
src/: .env-template  conftest.py  job_import.py  jobs_v2.csv  manage.py  pytest.ini  resource_import.py  resources.csv  task_import.py  tasks.csv
src/api/: api.py  permission_checker.py  schemas.py  utils.py
src/common/: admin.py  api.py  custom_test.py  enums.py  forms.py  models.py  schemas.py  services.py  urls.py  views.py
src/factories/: README.md  __init__.py  job_manager_factories.py  resource_assigner_factories.py  resource_calendar_factories.py  resource_manager_factories.py  scheduler_factories.py  user_factories.py
src/factryflow/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/fixtures/: initial_data.json  initial_test_data.json
src/issue/: admin.py  apps.py  filters.py  forms.py  models.py  selectors.py  services.py  urls.py
src/job_manager/: admin.py  api.py  apps.py  forms.py  services.py  urls.py  utils.py  views.py
src/microbatching/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
src/operator_view/: admin.py  apps.py
src/resource_assigner/: admin.py  api.py  apps.py  forms.py  models.py  (+5 more)
(+434 files in other folders)
