[tool.poetry]
name = "factryflow"
version = "0.1.0"
description = ""
authors = ["Jacob"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
django-allauth = "0.58.2"
django-htmx = "1.17.2"
django-template-partials = "23.3.post1"
django-ordered-model = "3.7.4"
django-simple-history = "3.4.0"
django-ninja = "1.1.0"
django-taggit = "5.0.1"
django-filter = "23.5"
pillow = "10.2.0"
django-extensions = "3.1.3"
pyparsing = "3.1.1"
pydot = "2.0.0"
graphviz = "0.20.1"
django-role-permissions = "3.2.0"
django-storages = {version = "1.13.2", extras = ["azure"]}
djlint = "1.34.0"
pytest = "7.4.3"
pytest-django = "4.7.0"
python-dotenv = "1.0.0"
factory-boy = "3.3.0"
faker = "20.1.0"
ipykernel = "6.27.0"
django-debug-toolbar = "4.2.0"
django-split-settings = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
